--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en"> 
  <head> 
   <meta charset="UTF-8"> 
-  <title>Happy Birthday</title> 
+  <title>Happy Birthday reka</title> 
   <link rel="stylesheet" href="style.css"> 
  </head> 
  <body> 
   <div class="card"> 
    <img src="https://github.com/DzarelDeveloper/Img/blob/main/ulangtahun.jpg?raw=true" alt="birthday" class="birthday"> 
    <div class="text"> 
-      <h1>Hi Diah</h1>  
-      <p>selamat ulang tahun diah semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu</p>
+      <h1>Hi reka</h1>  
+      <p>selamat ulang tahun reka semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu</p>
       <p class="muted">~ rama</p> 
     </div> 
     <div class="space"></div> 
