--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head> 
  <body> 
   <div class="card"> 
-   <img src="https://github.com/DzarelDeveloper/Img/blob/main/ulangtahun.jpg?raw=true" alt="birthday" class="birthday"> 
+   <img src="beautiful birthday cake.gif" alt="birthday" class="birthday"> 
    <div class="text"> 
       <h1>Hi reka</h1>  
       <p>selamat ulang tahun reka semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu</p>
