--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <img src="beautiful birthday cake.gif" alt="birthday" class="birthday"> 
    <div class="text"> 
       <h1>Hi reka</h1>  
-      <p>selamat ulang tahun reka semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu</p>
+      <p>selamat ulang tahun reka semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu 🎉🎂</p>
       <p class="muted">~ rama</p> 
     </div> 
     <div class="space"></div> 
