--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
  <head> 
   <meta charset="UTF-8"> 
   <title>Happy Birthday reka</title> 
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="rama.css"> 
+  <h1>Happy Birthday</h1>
  </head> 
  <body> 
   <div class="card"> 
    <img src="beautiful  birthday cake.gif" alt="birthday" class="birthday"> 
    <div class="text"> 
-      <h1>Hi reka</h1>  
+      <h2>Hi reka</h2>  
       <p>selamat ulang tahun reka semoga panjang umur dan sehat selalu jangan lupa jaga kesehatan sama jangan pernah menyerah meraih mimpimu 🎉🎂</p>
       <p class="muted">~ rama</p> 
     </div> 
